# sipf-std-client_nrf9160

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md  build.sh  flash.sh  format.sh  prj.conf  prj.conf.base  prj.conf.develop  prj.conf.production  prj.conf.production_disable_tls  prj.conf.staging  wercker.sh  wercker.yml
boards/: nrf9160dk_nrf9160_ns.overlay  thingy91_nrf9160_ns.overlay
boards/arm/m5stack_nrf9160/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  m5stack_nrf9160.dts  m5stack_nrf9160.yaml  m5stack_nrf9160_common.dts  m5stack_nrf9160_defconfig  m5stack_nrf9160ns.dts  m5stack_nrf9160ns.yaml  m5stack_nrf9160ns_defconfig
boards/arm/scm-ltem1nrf_nrf9160/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  scm-ltem1nrf_nrf9160.dts  scm-ltem1nrf_nrf9160.yaml  scm-ltem1nrf_nrf9160_common-pinctrl.dtsi  scm-ltem1nrf_nrf9160_common.dts  scm-ltem1nrf_nrf9160_common_0_14_0.dtsi  scm-ltem1nrf_nrf9160_defconfig  scm-ltem1nrf_nrf9160_ns.dts  scm-ltem1nrf_nrf9160_ns.yaml  scm-ltem1nrf_nrf9160_ns_0_14_0.overlay  scm-ltem1nrf_nrf9160_ns_defconfig  scm-ltem1nrf_nrf9160_partition_conf.dts  scm-ltem1nrf_nrf9160ns.dts  scm-ltem1nrf_nrf9160ns.yaml  scm-ltem1nrf_nrf9160ns_defconfig
cert/: sipf.iot.sakura.ad.jp
include/: cmd.h  cmd_ascii.h  debug_print.h  registers.h  uart_broker.h  version.h  xmodem.h
include/fota/: fota_http.h
include/gnss/: gnss.h
include/sipf/: sipf_client_http.h  sipf_object.h
lib/sipf/: CMakeLists.txt  Kconfig  LICENSE  README.md
lib/sipf/src/: sipf_auth.c  sipf_client_http.c  sipf_file.c  sipf_object.c
src/: cmd.c  cmd_ascii.c  main.c  registers.c  uart_broker.c  xmodem.c
src/fota/: fota_http.c
src/gnss/: gnss.c
src/sipf/: sipf_client_http.c  sipf_object.c
subsys/: CMakeLists.txt  Kconfig
subsys/include/net/: download_client_auth.h  fota_download_auth.h
subsys/net/: CMakeLists.txt  Kconfig
subsys/net/download_client/: CMakeLists.txt  Kconfig
(+11 files in other folders)
